k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cell-dino-service
  namespace: cell-dino-inference
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  type: ClusterIP
  selector:
    app: cell-dino
